--- a/style.css
+++ b/style.css
@@ -2,4 +2,15 @@
   margin: 0;
   padding: 0;
   background-origin: border-box;
+  
+  width: auto;
+}
+@media screen and (max-width: 480px) {
+   
+    /* Header */
+
+header{
+    display: flex;
+    justify-content:space-around;
+}
 }
