--- a/style.css
+++ b/style.css
@@ -5,12 +5,39 @@
   
   width: auto;
 }
+
+
+
+
 @media screen and (max-width: 480px) {
    
     /* Header */
 
 header{
+
+   margin: 0 24px 0 24px;
+   padding: 10px 0 12px 0;
+    background-color:blue;
+
     display: flex;
-    justify-content:space-around;
+    justify-content: space-between;
+}
+
+.header1{
+   background-color:#3C3A39;
+}
+
+
+
+
+
+.presentation{
+    
+    height: 590px;
+    background-color: #1C1A19;
+    background-image: url("images/illustration-header-mobile.svg");
+    background-repeat: no-repeat;
+  
+   
 }
 }
