--- a/style.css
+++ b/style.css
@@ -13,9 +13,20 @@
 header{
     margin: 0 24px 0 24px;
     padding: 10px 0 12px 0;
-    background-color:blue;
+    background-color:#3C3A39;
     display: flex;
     justify-content: space-between;
+}
+
+header > h2{
+    font-family: 'Roboto',sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    color: #FFFFFF;
+}
+
+header > i {
+    color: #FFFFFF;   
 }
 
 .header1{
@@ -29,17 +40,44 @@ header{
 
 .presentation{
     margin: 0 24px 0 24px;
-    height: 590px;
-    background-color: crimson;
+    height: 515px;
+    padding: 120px 0 0 0;
+    background-color:#1C1A19 ;
 
     background-image: url("images/illustration-header-mobile.svg");
     background-repeat: no-repeat;
-    background-position: 100% 100%;
-   
+    background-position: 100% 100%;  
+}
+
+.presentation > h2 {
+    
+    font-family: 'Crete Round', serif;
+    font-weight: normal;
+    font-size: 56px;
+    color: #FF6B00;
+    margin: 0 0 12px 0;
+    
+}
+
+.presentation > h4 {
+    font-family: 'Roboto',sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    color: #FFF5E1;
+    margin: 0 0 12px 0;
+}
+
+.presentation > p {
+    font-family: 'Poppins',sans-serif;
+    font-weight: normal;
+    font-size: 16px;
+    color: #FFFFFF;
+    margin: 0 0 12px 0;
 }
 
 .icons{
     background-color: cornsilk;
     display: flex;
+    
 }
 }
