--- a/style.css
+++ b/style.css
@@ -2,82 +2,91 @@
   margin: 0;
   padding: 0;
   background-origin: border-box;
-  
+
   width: auto;
 }
 
 @media screen and (max-width: 480px) {
-   
-    /* Header */
+  /* Header */
 
-header{
+  header {
     margin: 0 24px 0 24px;
     padding: 10px 0 12px 0;
-    background-color:#3C3A39;
+    background-color: #3c3a39;
     display: flex;
     justify-content: space-between;
-}
+  }
 
-header > h2{
-    font-family: 'Roboto',sans-serif;
+  header > h2 {
+    font-family: "Roboto", sans-serif;
     font-weight: bold;
     font-size: 18px;
-    color: #FFFFFF;
-}
+    color: #ffffff;
+  }
 
-header > i {
-    color: #FFFFFF;   
-}
+  header > i {
+    color: #ffffff;
+  }
 
-.header1{
-   background-color:#3C3A39;
-}
+  .header1 {
+    background-color: #3c3a39;
+  }
 
-.presentation1{
-    background-color: #1C1A19;
-    margin: 0 0 0 0;
-}
+  .presentation1 {
+    
+    background-color: #1c1a19;
+   
+    
+  }
 
-.presentation{
-    margin: 0 24px 0 24px;
-    height: 515px;
+  .presentation {
+    height: 540px;
+    margin: 0 0 0 24px;
+    
     padding: 120px 0 0 0;
-    background-color:#1C1A19 ;
+    background-color: #1c1a19;
 
     background-image: url("images/illustration-header-mobile.svg");
     background-repeat: no-repeat;
-    background-position: 100% 100%;  
-}
+    background-position: 100% 100%;
 
-.presentation > h2 {
-    
-    font-family: 'Crete Round', serif;
+  }
+
+  i {
+    color: #dbd8d7;
+    font-size: 23px;
+    height: 25px;
+  }
+
+  .presentation > h2 {
+    font-family: "Crete Round", serif;
     font-weight: normal;
     font-size: 56px;
-    color: #FF6B00;
+    color: #ff6b00;
     margin: 0 0 12px 0;
-    
-}
+  }
 
-.presentation > h4 {
-    font-family: 'Roboto',sans-serif;
+  .presentation > h4 {
+    font-family: "Roboto", sans-serif;
     font-weight: bold;
     font-size: 24px;
-    color: #FFF5E1;
+    color: #fff5e1;
     margin: 0 0 12px 0;
-}
+  }
 
-.presentation > p {
-    font-family: 'Poppins',sans-serif;
+  .presentation > p {
+    font-family: "Poppins", sans-serif;
     font-weight: normal;
     font-size: 16px;
-    color: #FFFFFF;
+    color: #ffffff;
     margin: 0 0 12px 0;
-}
+  }
 
-.icons{
-    background-color: cornsilk;
+  .icons {
     display: flex;
-    
-}
+  }
+
+  .icons > div {
+    margin: 0 20px 0 0;
+  }
 }
