--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     font-size: 18px;
-    color: #ffffff;
+    color: #fff;
   }
 
   header > i {
-    color: #ffffff;
+    color: #fff;
   }
 
   .header1 {
@@ -41,7 +41,6 @@
     margin: 0 0 0 24px;
     padding: 120px 0 0 0;
     background-color: #1c1a19;
-
     background-image: url("images/illustration-header-mobile.svg");
     background-repeat: no-repeat;
     background-position: 100% 100%;
@@ -73,7 +72,7 @@
     font-family: "Poppins", sans-serif;
     font-weight: normal;
     font-size: 16px;
-    color: #ffffff;
+    color: #fff;
     margin: 0 0 12px 0;
   }
 
