Changed the  h2 tag for an a tag as requiered by the reviewer to meet the syntaxis criteria.#1

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     justify-content: space-between;
   }
 
-  header > h2 {
+  .company {
     font-family: "Roboto", sans-serif;
     font-weight: bold;
     font-size: 18px;
