--- a/style.css
+++ b/style.css
@@ -101,5 +101,23 @@
     margin: 0 0 50px 0;
   }
 
-  
+  .second-main-card-container {
+    display: grid;
+    margin: 0 24px 0 24px;
+    
+  }
+
+  .card1 {
+    height: 590px;
+  }
+
+  .technologies-card1 {
+    list-style: none;
+    display: flex;
+  }
+
+  .technologies-card1 > li {
+
+    margin: 22px 24px 22px 0;
+  }
 }
