--- a/style.css
+++ b/style.css
@@ -375,4 +375,15 @@ header > i {
     margin: 32px 0 0 0;
   }
 
+  button:hover {
+    color:#F55800 ;
+    background-color: #FFF5E1;
+    border: 1px solid #F55800;
+  }
+
+  button:active {
+    color:#F4F1F0;
+    background-color: #E05304;
+    
+  }
 }
