--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ header > i {
     font-weight: bold;
     font-size: 17px;
     line-height: 24px;
-    color: #ffffff;
+    color: #fff;
     border: none;
     width: 124px;
     height: 48px;
