--- a/style.css
+++ b/style.css
@@ -393,6 +393,17 @@ button:active {
   padding: 120px 24px 196px;
 }
 
+.contact-intro {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 44px;
+  text-align: center;
+  color: #172b4d;
+  margin-bottom: 72px;
+}
+
 .contact-main-list {
   display: flex;
   flex-direction: column;
