--- a/style.css
+++ b/style.css
@@ -411,6 +411,25 @@ button:active {
   align-items: center;
 }
 
+.contact-main-list li {
+  width: 100%;
+}
+
+.contact-main-list input {
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 32px;
+  border: 0;
+  border-bottom: 1px solid #dbd8d7;
+  padding: 14px 0;
+}
+
 .hidden {
   visibility: hidden;
 }
